--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-animejs": "^2.1.1",
+    "vue-router": "^3.2.0",
+    "vue-speech": "^0.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
