--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@luxdamore/vue-cursor-fx": "^1.4.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-animejs": "^2.1.1",
