Hacky solution to DOM issue

--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "dependencies": {
     "@luxdamore/vue-cursor-fx": "^1.4.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
+    "vue": "^2.6.12",
     "vue-animejs": "^2.1.1",
-    "vue-router": "^3.2.0",
+    "vue-router": "^3.4.6",
     "vue-speech": "^0.1.0",
-    "vue-squircle": "0.0.1"
+    "vue-squircle": "^0.2.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
@@ -24,7 +24,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
     "root": true,
