--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.12",
     "vue-animejs": "^2.1.1",
+    "vue-motion": "^0.2.3",
     "vue-router": "^3.4.6",
     "vue-speech": "^0.1.0",
     "vue-squircle": "^0.2.1"
