--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@luxdamore/vue-cursor-fx": "^1.4.0",
     "core-js": "^3.6.5",
+    "suncalc": "^1.8.0",
     "vue": "^2.6.12",
     "vue-animejs": "^2.1.1",
     "vue-motion": "^0.2.3",
