--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/runtime": "^7.12.0",
     "@luxdamore/vue-cursor-fx": "^1.4.0",
     "core-js": "^3.6.5",
+    "ibm-watson": "^5.7.1",
     "suncalc": "^1.8.0",
     "vue": "^2.6.12",
     "vue-animejs": "^2.1.1",
@@ -41,7 +43,8 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "vue/no-unused-vars": "off"
+      "vue/no-unused-vars": "off",
+      "no-unused-vars": "off"
     }
   },
   "browserslist": [
