--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
     "@babel/runtime": "^7.12.0",
     "@luxdamore/vue-cursor-fx": "^1.4.0",
     "core-js": "^3.6.5",
-    "ibm-watson": "^5.7.1",
     "suncalc": "^1.8.0",
+    "svginjector-vue": "^1.0.4",
     "vue": "^2.6.12",
-    "vue-animejs": "^2.1.1",
     "vue-motion": "^0.2.3",
     "vue-router": "^3.4.6",
     "vue-speech": "^0.1.0",
