--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.12",
     "vue-motion": "^0.2.3",
     "vue-router": "^3.4.6",
+    "vue-slider-component": "^3.2.7",
     "vue-speech": "^0.1.0",
     "vue-squircle": "^0.2.1"
   },
